--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+html {
+  height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  height: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.outer-container {
+  display: flex;
+  height: 100%;
+}
+.sidebar-container {
+  width: 25%;
+  height: 100%;
+  overflow-y: scroll;
+}
+.sidebar-wrapper {
+  padding: 1rem;
+}
+.save-container {
+  display: flex;
+  justify-content: center;
+}
+.save-button {
+  border: none;
+  border-radius: 5px;
+  /* width:6rem; */
+  padding: 0.5rem 1rem;
+  background: #2a4379;
+  color: white;
+  box-shadow: 1px 2px 10px rgba(42, 67, 121, 0.65);
+  transition: all ease 0.3s;
+  cursor: pointer;
+  margin-right: 1rem;
+}
+.save-button:hover {
+  transform: translateY(-0.25rem);
+  box-shadow: 2px 5px 15px rgba(42, 67, 121, 0.45);
+  transition: all ease 0.3s;
+}
+.theme-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+.widget-column {
+  /* text-align: center; */
+  width: 75%;
+}
+livelike-widgets {
+  width: 75%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.controls-container {
+  width: 50%;
+  padding: 1rem;
+}
+.input-container {
+  position: relative;
+  margin: 1rem 0.5rem;
+}
+.color-picker-wrap{
+  z-index: 10;
+}
+.input-container > label {
+  padding-right: 0.5rem;
+}
+.input-container > input {
+  width: 4rem;
+  padding: 3px;
+  border-radius: 4px;
+  border: 1px solid #929292;
+}
+.widget-block-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.control-wrap {
+  display: flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.widget-container {
+  width: 50%;
+  margin: 1rem;
+}
+.widget-name-title {
+  text-align: center;
+}
+.color-picker-wrap {
+  position: absolute;
+}
+.dock-container {
+  display: flex;
+  position: fixed;
+  min-height: 75px;
+  height: 75px;
+  z-index: 100;
+  border: 1px solid black;
+  width: 100%;
+  background: white;
+  top: 0;
+}
+.universal-container {
+  display: flex;
 }
