Added chat element and tab switcher to switch between widget and chat element. Added display style switch as temp solution to not reload element each tab switch

--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,18 @@ livelike-widgets {
 .universal-container {
   display: flex;
 }
+livelike-chat {
+  width: 75%;
+}
+.block{
+  display:block !important;
+}
+.flex {
+  display: flex !important;
+}
+.hidden {
+  display: none !important;
+}
+.selected {
+  background: #829dd8;
+}
